# memfd-exec

./: .gitignore  Cargo.toml  README.md
src/: command_env.rs  executable.rs  file_desc.rs  process.rs
