[package]
name = "memfd-exec"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Run an executable directly from memory with a friendly interface."
repository = "https://github.com/VHSgunzo/memfd-exec"
readme = "README.md"

[profile.release]
lto = true
debug  = false
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 0

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3.2.0"
reqwest = { version = "0.12.24", features = ["blocking"] }

[dependencies]
libc = "0.2.154"
nix = { version = "0.30.1", features = ["fs", "process"] }
